src/main/java/org/example/jobsearch_51/error/handler/AccessDeniedExceptionHandler.java
package org.example.jobsearch_51.error.handler;

import lombok.RequiredArgsConstructor;
import lombok.extern.slf4j.Slf4j;
import org.example.jobsearch_51.error.ErrorResponseBody;
import org.example.jobsearch_51.error.ErrorService;
import org.example.jobsearch_51.exceptions.AccessDeniedException;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.RestControllerAdvice;

@Slf4j
@RestControllerAdvice
@RequiredArgsConstructor
public class AccessDeniedExceptionHandler {

    private final ErrorService errorService;

    @ExceptionHandler(AccessDeniedException.class)
    public ResponseEntity<ErrorResponseBody> handleAccessDeniedException(AccessDeniedException e) {
        log.error("Access denied: {}", e.getMessage());
        return ResponseEntity
                .status(HttpStatus.FORBIDDEN)
                .body(errorService.makeResponse(e));
    }
}